<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_24"
        android:title="@string/history"/>

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/ic_scan_24"
        android:title="@string/scan" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_outline__notifications_none_24"
        android:title="@string/notification" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/setting" />

</menu>