<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.scan.ScanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerWaiting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:id="@+id/ivWaiting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/v_meditate"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.266"
            tools:layout_editor_absoluteX="0dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ivWaiting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerScanFailed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:id="@+id/ivAsking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/v_asking"
            android:padding="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.266"
            tools:layout_editor_absoluteX="0dp" />
        <TextView
            android:id="@+id/scanFailedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_failed_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ivAsking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/scanFailedSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_failed_subtitle"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/scanFailedTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnTryAgain"
            app:layout_constraintTop_toBottomOf="@id/scanFailedSubtitle"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/try_again_button"
            android:layout_margin="16dp"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scanFailedSubtitle"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerScanSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titlePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nutrition_facts"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/titlePage"
            android:layout_marginTop="4dp"
            app:hintAnimationEnabled="false"
            android:hint="Date"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconContentDescription="Select Date"
            app:endIconMode="custom"
            app:counterEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDate"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:padding="8dp"
                android:textSize="16sp"
                android:focusable="false"
                android:hint="DD/MM/YYYY"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <ImageView
            android:id="@+id/ivScan"
            android:layout_width="180dp"
            android:layout_height="180dp"
            tools:src="@tools:sample/backgrounds/scenic"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/inputDateLayout"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/titleSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            android:layout_marginTop="28dp"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/ivScan"
            app:layout_constraintTop_toTopOf="@id/ivScan"
            app:layout_constraintBottom_toTopOf="@id/contentSugar"/>

        <TextView
            android:id="@+id/contentSugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar_content"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/titleSugar"
            app:layout_constraintStart_toEndOf="@id/ivScan"
            app:layout_constraintBottom_toTopOf="@id/titleSpoon"/>

        <TextView
            android:id="@+id/titleSpoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comparison_to_sdm"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/contentSugar"
            app:layout_constraintStart_toEndOf="@id/ivScan"
            app:layout_constraintBottom_toTopOf="@id/contentSpoon"/>

        <TextView
            android:id="@+id/contentSpoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comparison_to_sdm_content"
            android:textSize="20sp"
            android:layout_marginBottom="28dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/titleSpoon"
            app:layout_constraintStart_toEndOf="@id/ivScan"
            app:layout_constraintBottom_toBottomOf="@id/ivScan"/>

        <Button
            android:id="@+id/btnCancel2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSaveScan"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/btnSaveScan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_activity_button"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/btnCancel2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>